# p1monitor

./: LICENSE  README.md  p1monitor.py  pyproject.toml
p1read/: README.md  __main__.py
p1read/p1read.egg-info/: PKG-INFO
p1read/src/p1read.egg-info/: SOURCES.txt  top_level.txt
src/: __init__.py  __main__.py
